--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="icon" type="image/png" href="/IMAGES/Nutri-Icon.png" />
    
     <title>Blog Page</title>
     <link
@@ -531,3 +532,4 @@
    
   </body>
 </html>
+
