--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" type="image/png" href="/IMAGES/Nutri-Icon.png" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Error</title>
@@ -17,3 +18,4 @@
     <a href="<%= backLink %>"><%= backLinkText %></a>
 </body>
 </html>
+
