--- a/views/pricing.ejs
+++ b/views/pricing.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="icon" type="image/png" href="/IMAGES/Nutri-Icon.png" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nutri Connect - Pricing</title>
@@ -1061,3 +1062,4 @@
     </script>
   </body>
 </html>
+
