--- a/views/dietitian_profiles.ejs
+++ b/views/dietitian_profiles.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="icon" type="image/png" href="/IMAGES/Nutri-Icon.png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <title> Dietitian Profile Page</title>
     <link
@@ -844,3 +845,4 @@
     
   </body>
 </html>
+
