--- a/views/roles_signup.ejs
+++ b/views/roles_signup.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" type="image/png" href="/IMAGES/Nutri-Icon.png" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ROLES SIGN-UP PAGE</title>
@@ -168,3 +169,4 @@
 
 </body>
 </html>
+
