--- a/views/terms_conditions.ejs
+++ b/views/terms_conditions.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="icon" type="image/png" href="/IMAGES/Nutri-Icon.png" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nutri-Connect | Terms & Conditions</title>
@@ -217,4 +218,6 @@
 </body>
 
 </html>
+
+
 
