--- a/views/users.ejs
+++ b/views/users.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
  
 <head>
+    <link rel="icon" type="image/png" href="/IMAGES/Nutri-Icon.png" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Users Page | Nutri-Connect</title>
@@ -710,3 +711,4 @@
 </body>
 
 </html>
+
