--- a/views/verify_diet.ejs
+++ b/views/verify_diet.ejs
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" type="image/png" href="/IMAGES/Nutri-Icon.png" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dietitian Document Verification</title>
@@ -826,3 +827,5 @@
     </script>
 </body>
 </html>
+
+
